--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ categories = ["thorswap", "migard", "thorchain", "api"]
 license = "MIT"
 keywords = ["thorswap", "migard", "thorchain", "api"]
 readme = "README.md"
-description = "Thorchain Thorswap Midgard API client for Rust"
+description = "Thorchain Midgard API client for Rust"
+repository = "https://github.com/physics515/midgard-rs"
 
 [dependencies]
 serde = { version = "1", features = ["derive", "rc"] }
